[project]
authors = [{name = "Yunho Cho", email = "ycho358@gatech.edu"}]
dependencies = ["typer>=0.21.1,<0.22", "docling>=1.11.0,<2"]
name = "halcon-docs"
requires-python = ">= 3.11,<3.14"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
python = "3.12.*"

[tool.pixi.pypi-dependencies]
halcon_docs = { path = ".", editable = true }

[tool.pixi.tasks]
